[package]
name = "code-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ion-rs = "0.15.0"
proc-macro2 = "1.0"
quote = "1.0.21"
convert_case = "0.6.0"
prettyplease = "0.1.23"
syn = "1.0.107"
thiserror = "1.0"
derive_builder = "0.12.0"
regex = "1.7.0"
ion-schema = "0.6.0"